updating nchannel stuff

--- a/nChanel Bstrap Pat Cheek/nChanpartial.html
+++ b/nChanel Bstrap Pat Cheek/nChanpartial.html
@@ -9,20 +9,20 @@
 
 <div class="mainContainer">
 
-	<div class="phone">
-		<b>1-844-533-1333</b>
-	</div><!--end of phone div-->
-	<div class="spacer">""</div>
-	<div class="quoteButton">
-		<b>get a Quote</b>
-	</div> <!--quote button div end-->
 	<div class="centerAd" align="center">
-	<a><b><i>MultiChannel... simplified.</i></b></a>
-	<br>
-	<br>
-	<a><i><font size="5">Build a stronger business with us: Simplify merchandising. Improve customer experience. Maximize revenue in every channel. Get control.</font></i></a>
+		<a><b><i>MultiChannel... simplified.</i></b></a>
+		<br>
+		<br>
+		<a align="center"><i><font size="5">Build a stronger business with us: Simplify merchandising. Improve customer experience. Maximize revenue in every channel. Get control.</font></i></a>
+		<div class="spacer" align="center"></div>
+		<div class="learnMore" align="center">learn more</div>
+		
+
 	</div> <!--Center words div-->
-	<div class="learnMore" align="center">learn more</div>
+	<div class="multiChannel"><img src="multichannel.png"></div>
+	<div class="complicated"><a><b><i>Multichannel retail is way too complicated. We simplify it.</i></b></a></div>
+
+	
 
 </div> <!--container end-->
 
