--- a/nChanel Bstrap Pat Cheek/index.html
+++ b/nChanel Bstrap Pat Cheek/index.html
@@ -57,6 +57,9 @@
     </div> <!-- header container -->
     
 </div> <!-- main container-->
+
+
+
 <div class="mainContainer">
 
     <div class="centerAd" align="center">
@@ -76,13 +79,18 @@
     <div class="complicated"><b><i>Multichannel retail is way too complicated. We simplify it.</i></b>
     </div><!--complicated banner div-->
 
-    <div class="features">
-        <div
-    </div> <!--End of features container-->
+</div> <!--mainContainer end-->
 
-    
+<div class="featuresContainer">
+    <div class="features" align="center"><img src="pAndP.png">
+    </div>
+    <div class="features" align="center"><img src="dAndO.png">
 
-</div> <!--container end-->
+    <div class="viewFeatures" align="center">
+    <b><i>View All Features</i></b>
+    </div>
+
+</div><!--featuresContainer end-->
 
 
 
