More work on final

--- a/Assignments/clinville/Final/stout_contact.html
+++ b/Assignments/clinville/Final/stout_contact.html
@@ -29,6 +29,7 @@
 	Fax: 304-643-2737<br>
 	Email: <a href="mailto:stouthardware@zoominternet.net">stouthardware@zoominternet.net</a><br>
 	Twitter: <a href="https://twitter.com/StoutHardware" target="_blank">@StoutHardware</a></br>
+	Facebook: <a href="https://www.facebook.com/stouthardware" target="_blank">Stout Hardware</a></br>
 	<br><br>
 	Hours:<br>
 	Monday - Friday: 8AM - 5PM<br>
