--- a/Assignments/clinville/Final/stout_directions.html
+++ b/Assignments/clinville/Final/stout_directions.html
@@ -20,7 +20,7 @@
 			</tr>
 		</table>
 	<p>
-	<div>Directions from US-50 E
+	<div>Directions from US-50 E<img src="stoutmap.jpg" class="map">
 	<ul><li>Take the WV-16 exit toward Ellenboro/Harrisville</li>
    	<li>Turn right onto WV-16 S/Main St</li>
     <li>Turn left onto S Spring St</li>
