--- a/Assignments/clinville/Final/stout_services.html
+++ b/Assignments/clinville/Final/stout_services.html
@@ -20,7 +20,7 @@
 			</tr>
 		</table>
 	<div> <br>
-		Stout Hardware has several services to offer. These include:
+		Stout Hardware has several services to offer. These include: <img src="hose.jpg" class="hose">
 		<ul><li>small engine repair</li>
 		<li>key cutting</li>
 		<li>glass cutting</li>
