--- a/Assignments/clinville/Final/stout_tips.html
+++ b/Assignments/clinville/Final/stout_tips.html
@@ -34,7 +34,7 @@
  		<br><br><br>
 	</div>
 	<div>
-		<h3><b><i><u><a name="water">What kind of water pipe do I have?</a></u></i></b></h3>
+		<h3><b><i><u><a name="water">What kind of water pipe do I have?</a></u></i></b></h3><img src="pvc.jpg" class="pvc">
  		There is a widely made mistake concerning plastic water pipe. Many people come into the store and say they need PVC pipe when what they really need is CPVC pipe.  The CPVC pipe is by far the most common pipe in our area. In appearance, it is off-white, cream colored, or light yellow. It is measured across the outside diameter and is used for both hot and cold water. The other pipe is PVC pipe, which is pure white in appearance, measured across the inside diameter, and can withstand only cold water. PVC is slightly less expensive than CPVC so it is puzzling that most people have the more expensive CPVC in their cold water lines.  
  		<br><br><br>
 	</div>
