and again on final

--- a/Assignments/clinville/Final/stout_home.html
+++ b/Assignments/clinville/Final/stout_home.html
@@ -6,7 +6,7 @@
 <body>
 	<div><center>
 		<h1 class="heading">Stout Hardware</h1>
-		<h2>Bringing you the best service since 1880</h2></center>
+		<h2 class="subheading">Bringing you the best service since 1880</h2></center>
 	</div>
 	<div class="main">
 	<table class="menu">
