--- a/Assignments/DConner/Final/TheDawnWikiV1/Wiki/Template.html
+++ b/Assignments/DConner/Final/TheDawnWikiV1/Wiki/Template.html
@@ -38,46 +38,49 @@
 
    <div class="nav bordone"> <!-- Navigation Bar -->
       <div class="navselec bordone" id="0">
-         <p><i class="fa fa-caret-right fa-fw" id="fa-0"></i>The Dark Dawn</p>
+         <p><i class="fa fa-caret-right fa-fw" id="fa-0"></i>kjlskj</p>
       </div>
          <div class="navselecchild bordone navchild-0">
-            <p><i class="fa fa-minus"></i>Gregory Sore</p>
+            <p><i class="fa fa-minus"></i>kksksk</p>
          </div>
          <div class="navselecchild bordone navchild-0">
-            <p><i class="fa fa-minus"></i>Madam HollowWind</p>
-         </div>
-         <div class="navselecchild bordone navchild-0">
-            <p><i class="fa fa-minus"></i>Master HollowWind</p>
-         </div>
-         <div class="navselecchild bordone navchild-0">
-            <p><i class="fa fa-minus"></i>Sir Adam Belicose</p>
-         </div>
-         <div class="navselecchild bordone navchild-0">
-            <p><i class="fa fa-minus"></i>Elrieth HollowWind</p>
-         </div>
-         <div class="navselecchild bordone navchild-0">
-            <p><i class="fa fa-minus"></i>Aran HollowWind</p>
+            <p><i class="fa fa-minus"></i>kksasdff</p>
          </div>
       
       <div class="navselec bordone" id="1">
-         <p><i class="fa fa-caret-right fa-fw" id="fa-1"></i>The Azure Dawn</p>
+         <p><i class="fa fa-caret-right fa-fw" id="fa-1"></i>kjlskj</p>
       </div>
          <div class="navselecchild bordone navchild-1">
-            <p><i class="fa fa-minus"></i>Comming Soon?</p>
+            <p><i class="fa fa-minus"></i>kksksk</p>
+         </div>
+         <div class="navselecchild bordone navchild-1">
+            <p><i class="fa fa-minus"></i>kksasdff</p>
+         </div>
+         <div class="navselecchild bordone navchild-1">
+            <p><i class="fa fa-minus"></i>kksasdff</p>
          </div>
       
       <div class="navselec bordone" id="2">
-         <p><i class="fa fa-caret-right fa-fw" id="fa-2"></i>The Verdant Dawn</p>
+         <p><i class="fa fa-caret-right fa-fw" id="fa-2"></i>kjlskj</p>
       </div>
          <div class="navselecchild bordone navchild-2">
-            <p><i class="fa fa-minus"></i>Comming Soon?</p>
+            <p><i class="fa fa-minus"></i>kksksk</p>
+         </div>
+         <div class="navselecchild bordone navchild-2">
+            <p><i class="fa fa-minus"></i>kksasdff</p>
+         </div>
+         <div class="navselecchild bordone navchild-2">
+            <p><i class="fa fa-minus"></i>kksasdff</p>
+         </div>
+         <div class="navselecchild bordone navchild-2">
+            <p><i class="fa fa-minus"></i>kksasdff</p>
          </div>
 
    </div>
 
    <div class="lemming"> <!-- Information Section -->
-      <h1 class="header1">The Dawn Wiki</h1>
-      <p>Navigate using the bar on the Left</p>
+      <img src="Default.jpg" alt="[Character] Portrait" style="float:left; width: 200px; height: 200px;" />
+      <p>kjlskj asdf asdkl fkdl aksk d llfkjdks  kljdlkjf kdjklf ldkfkj llkdklj lkjdlkjf djk lfkfkjdkj lkfkljdkflf kjdkflf kjdlfkjdlf</p>
    </div>
 
  </div>
