nChannel Final update

--- a/nChanel Bstrap Pat Cheek/index.html
+++ b/nChanel Bstrap Pat Cheek/index.html
@@ -20,6 +20,12 @@
     <![endif]-->
   </head>
   <body>
+    <div class="helpBar">
+        <div  class="helpButtonOne"><b>1-833-533-1333</b>
+        </div>
+        <div  class="helpButtonTwo"><b>get a quote</b>
+        </div>
+    </div>
 
     <div class="navbar navbar-default navbar-fixed-top" role="navigation" style="background:rgb(59,62,75)">
          <div style="background: rgb(53,56,69)">
@@ -39,7 +45,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <img src="nChanLogo.png"> 
+                <img src="nChanLogo.png">
         </div> <!--navbar header-->
 
         <div class="navbar-collapse collapse">
@@ -62,18 +68,18 @@
 
 <div class="mainContainer">
 
-    <div class="centerAd" align="center">
+    <div class="centerAd" align="center" >
         <b><i><font size="6">MultiChannel... simplified.</i></b></font>
         <br>
         <br>
         <i><font size="5">Build a stronger business with us: Simplify merchandising. Improve customer experience. Maximize revenue in every channel. Get control.</font></i>
         <div class="spacer" align="center"></div>
-        <div class="learnMore" align="center">learn more</div>
+        <div class="learnMore" align="center"><b><i>learn more</b></i></div>
         
 
     </div> <!--Center words div-->
 
-    <div class="multiChannel"><img src="multichannel.png">
+    <div class="multiChannel"align="center"><img src="multichannel.png">
     </div><!--multichannel pic div-->
 
     <div class="complicated"><b><i>Multichannel retail is way too complicated. We simplify it.</i></b>
