--- a/Assignments/dfarnsworth/Final/StarWars.html
+++ b/Assignments/dfarnsworth/Final/StarWars.html
@@ -29,49 +29,49 @@
 
 		<div id="site">
 			<a href="StarWars.html">
-				<p id="msite" class="deapth;">Star Wars</p>
+				<p id="msite" class="deapth">STAR WARS LE-6</p>
 			</a>
 		</div>
 
 		<div id="linky0" class="link0">
 			<a href="cache/Jedi.html">
-				<p class="deapth0">Galactic Republic</p>
+				<p class="deapth">Galactic Republic</p>
 			</a>
 		</div>
 
 		<div id="linky1" class="link1">
 			<a href="cache/Sith.html">
-				<p class="deapth0">Galactic Empire</p>
+				<p class="deapth">Galactic Empire</p>
 			</a>
 		</div>
 
 		<div id="linky2" class="link2">
 			<a href="cache/Jedi.html">
-				<p class="deapth0">Bounty Hunters</p>
+				<p class="deapth">Bounty Hunters</p>
 			</a>
 		</div>
 
 		<div id="linky3" class="link3">
 			<a href="cache/Jedi.html">
-				<p class="deapth0">Clones</p>
+				<p class="deapth">Clones</p>
 			</a>
 		</div>
 
 		<div id="linky4" class="link4">
 			<a href="cache/Sith.html">
-				<p class="deapth0">Droids</p>
+				<p class="deapth">Droids</p>
 			</a>
 		</div>
 
 		<div style="margin-top: 400px; white;padding-left: 20%; padding-right: 20%;">
-			<h1 style="color: rgb(232,225,27);">
+			<h1 style="color: rgb(232,225,27); font-family: StarwarsOutline;">
 				STAR
 					<br  ></br>
 				WARS
 				<br  ></br>
 			</h1>
 
-				<h3>Star Wars is a science fiction franchise comprised of movies, books, comics, video games, toys, and animated shows. It is a fictional universe created by George Lucas. The Star Wars story employs archetypal motifs common to science fiction, political climax and classical mythology, as well as musical motifs of those aspects.
+				<p>Star Wars is a science fiction franchise comprised of movies, books, comics, video games, toys, and animated shows. It is a fictional universe created by George Lucas. The Star Wars story employs archetypal motifs common to science fiction, political climax and classical mythology, as well as musical motifs of those aspects.
 					<br  ></br>
 				As one of the foremost examples of the space opera sub-genre of science fiction, Star Wars has become part of mainstream popular culture, as well as being one of the highest-grossing series of all time. It is currently the fifth highest-grossing film series under Harry Potter, Marvel Cinematic Universe, James Bond, and Middle-earth.
 					<br  ></br>
@@ -140,8 +140,7 @@
 				George Lucas has often exaggerated the amount of material he had written for the series, most of these exaggerations stemming from the post-1978 period where the film grew into a true phenomenon. Lucasfilm often indicated that he had written twelve stories to be filmed, and Lucas was quick to tell how Star Wars was always Episode IV that was meant as a middle-chapter. Lucas also began to claim that Darth Vader's parentage of Luke and redemption was always a major part of his plan from early on, and even that this was his very first script or treatment. As Jonathan Rinzler and Michael Kaminski show, this is demonstrably false. Kaminski rationalizes that these exaggerations are part publicity device and part security measure — with the series and story radically changing throughout the years, Lucas would emphasize that its current embodiment was the original intention; with the series previously existing as different and often contradictory forms, this makes audiences view the material only from the perspective that Lucas' wishes them to view the material, and it also may protect against outrage that such a popular storyline was being changed post-release after being cherished by so many.
 					<br  ></br>
 				Information on the screenplays comes from many sources. Most of the drafts of Star Wars were leaked to the public in 1977 and have circulated since then. 1987's Annotated Screenplays thoroughly documented the early drafts of the trilogy, and Rinzler's Making of Star Wars supplemented this info with even more detail, including drafts which had not yet been publicly leaked, as well as Lucas' personal notes. Information on the prequel scripts is comparatively more scarce, but a number of making-of books give insight into the writing process and early drafts. The prequels drafts are largely similar to the final films due to Lucas exploring ideas in the art department rather than on paper.
-
-			</h3>		
+			</p>		
 		</div>
 	</div>
 </body>
