--- a/Assignments/dfarnsworth/Final/StarWars.html
+++ b/Assignments/dfarnsworth/Final/StarWars.html
@@ -23,51 +23,49 @@
 	<div class="container">
 		<header>
 			<div>
-				<i id="mbars" class="fa fa-bars deapth" style="font-size: 32.5px;" onclick="expand()"></i>
+				<i id="mbars" class="fa fa-bars depth" onclick="expand()"></i>
 			</div>
 		</header>
 
 		<div id="site">
 			<a href="StarWars.html">
-				<p id="msite" class="deapth">STAR WARS LE-6</p>
+				<p id="msite" class="depth">STAR WARS LE-6</p>
 			</a>
 		</div>
 
 		<div id="linky0" class="link0">
 			<a href="cache/Jedi.html">
-				<p class="deapth">Galactic Republic</p>
+				<p class="depth">Galactic Republic</p>
 			</a>
 		</div>
 
 		<div id="linky1" class="link1">
 			<a href="cache/Sith.html">
-				<p class="deapth">Galactic Empire</p>
+				<p class="depth">Galactic Empire</p>
 			</a>
 		</div>
 
 		<div id="linky2" class="link2">
-			<a href="cache/Jedi.html">
-				<p class="deapth">Bounty Hunters</p>
+			<a href="cache/BountyHunters.html">
+				<p class="depth">Bounty Hunters</p>
 			</a>
 		</div>
 
 		<div id="linky3" class="link3">
 			<a href="cache/Jedi.html">
-				<p class="deapth">Clones</p>
+				<p class="depth">Clones</p>
 			</a>
 		</div>
 
 		<div id="linky4" class="link4">
 			<a href="cache/Sith.html">
-				<p class="deapth">Droids</p>
+				<p class="depth">Droids</p>
 			</a>
 		</div>
 
 		<div style="margin-top: 400px; white;padding-left: 20%; padding-right: 20%;">
-			<h1 style="color: rgb(232,225,27); font-family: StarwarsOutline;">
-				STAR
-					<br  ></br>
-				WARS
+			<h1 class="heady">
+				STAR WARS
 				<br  ></br>
 			</h1>
 
