--- a/Assignments/abrand/Final Project Avengers/Avengers Main Page.html
+++ b/Assignments/abrand/Final Project Avengers/Avengers Main Page.html
@@ -83,10 +83,15 @@
   		
   </div>
 
-<div class="vertical" style="background-color: lightgrey">
-  <p style="margin-right: 700pt"> They are Earth's mightiest heroes, formed to fight the foes no single hero could withstand. The Avengers are the most prestigious and powerful super-hero team in the world, an ever-shifting assemblage of super-beings, adventurers and crime fighters devoted to protecting the planet from menaces beyond the scope of conventional authorities.More on Marvel.com: http://marvel.com/universe/Avengers#ixzz3IAv1YMwQ
+<div class="vertical" style="height: 300px; width: 50%; float: left; margin-right: 100000px">
+  <p style="margin-right: 700pt; margin-top: 50pt; margin-left: 50pt; margin-right: 50pt; font-size: 35pt; background-color: midnightblue; color: whitesmoke;"> They are Earth's mightiest heroes, formed to fight the foes no single hero could withstand. The Avengers are the most prestigious and powerful super-hero team in the world, an ever-shifting assemblage of super-beings, adventurers and crime fighters devoted to protecting the planet from menaces beyond the scope of conventional authorities.
  </p>
 
+
+</div>
+
+<div style="float: right">
+  <img style="float: right" src="http://img3.wikia.nocookie.net/__cb20130530230412/avengers-assemble/images/8/8f/Avengers_Tower.png">
 
 </div>
 
