--- a/Assignments/abrand/Final Project Avengers/Captain America.html
+++ b/Assignments/abrand/Final Project Avengers/Captain America.html
@@ -106,7 +106,22 @@
       <legend class="white"> Affiliations: </legend>
 
       <ul> 
-        <li class="33"> <label> U.S. Army </label> </li> <li> Rank: Captain </li> <li> Avengers </li> <li> Abilities: Olympic-level athleticism </li> </li>
+        <li class="33"> 
+          <label> U.S. Army 
+
+          </label> 
+        </li> 
+
+        <li> Rank: Captain </li> 
+        <li> Avengers </li> 
+        <li> S.H.I.E.L.D. </li>
+      </ul>
+        <legend class="white 33"> Abilities: Olympic-level athleticism </legend> 
+
+
+
+
+        </li>
 
       </ul>
 
