--- a/Assignments/abrand/Final Project Avengers/Captain America.html
+++ b/Assignments/abrand/Final Project Avengers/Captain America.html
@@ -116,8 +116,11 @@
         <li> Avengers </li> 
         <li> S.H.I.E.L.D. </li>
       </ul>
-        <legend class="white 33"> Abilities: Olympic-level athleticism </legend> 
-
+      
+        <legend class="white 33"> Abilities: </legend>
+      <ul> 
+        <li class="white 33"> <label> Olympic-level athleticism </label> </li> 
+      </ul>
 
 
 
