Captain almost finished

--- a/Assignments/abrand/Final Project Avengers/Avengers Main Page.html
+++ b/Assignments/abrand/Final Project Avengers/Avengers Main Page.html
@@ -93,7 +93,7 @@
 
 
 </div>
-<div style="float: right">
+<div style="float: right; height: 400px">
   <img style="float: right" src="http://img3.wikia.nocookie.net/__cb20130530230412/avengers-assemble/images/8/8f/Avengers_Tower.png">
 </div>
 
