--- a/Assignments/abrand/Final Project Avengers/Captain America.html
+++ b/Assignments/abrand/Final Project Avengers/Captain America.html
@@ -100,6 +100,7 @@
         <li class="33"> <label> Steve Rogers </label>
 
         </li> 
+        <li class="33"> Alias: Captain America </li>
 
       </ul> 
 
@@ -112,14 +113,31 @@
           </label> 
         </li> 
 
-        <li> Rank: Captain </li> 
+        <li> Military Rank: Captain </li> 
         <li> Avengers </li> 
         <li> S.H.I.E.L.D. </li>
       </ul>
       
         <legend class="white 33"> Abilities: </legend>
       <ul> 
-        <li class="white 33"> <label> Olympic-level athleticism </label> </li> 
+        <li class="white 33"> <label> Olympic-level athleticism </label> </li>
+        <li class="white 33"> Peak Phyiscal Condition </li>
+        <li class="white 33"> Master at Martial Arts </li>
+        <li class="white 33"> Slowed age rate </li> 
+      </ul>
+        <legend class="white 33"> Equipment </legend>
+      <ul> 
+        <li class="white 33"> Vibranium Shield </li>
+        <li class=" white 33"> Fists of Fury </li>
+
+      </ul>
+      <legend class="white 33"> Fun Facts </legend>
+      <ul>
+        <li class="white 33"> 6'2" </li>
+         <li class="white 33"> 220 pounds </li>
+           <li class="white 33"> Can run 13 miles in 30 minutes...That's a 2:14 per mile </li> 
+           <li class="white 33"> Leader of The Avengers </li>
+
       </ul>
 
 
