Link made between pages

--- a/Assignments/abrand/Final Project Avengers/Captain America.html
+++ b/Assignments/abrand/Final Project Avengers/Captain America.html
@@ -89,7 +89,7 @@
 
 
 	<div> 
-		<img style="height: 450px; float: right; width: 450px; position: fixed" src="http://img4.wikia.nocookie.net/__cb20131114183602/disney/images/b/bf/CaptainAmerica6-Avengers.png">
+		<a href="Avengers Main Page.html"> <img style="height: 450px; float: right; width: 450px; position: fixed" src="http://img4.wikia.nocookie.net/__cb20131114183602/disney/images/b/bf/CaptainAmerica6-Avengers.png"> </a>
   </div>
 
 
