--- a/Assignments/abrand/Final Project Avengers/Avengers Main Page.html
+++ b/Assignments/abrand/Final Project Avengers/Avengers Main Page.html
@@ -94,7 +94,7 @@
 
 </div>
 <div style="float: right">
-  <img class="sizefit" src="http://img3.wikia.nocookie.net/__cb20130530230412/avengers-assemble/images/8/8f/Avengers_Tower.png">
+  <img class="sizefit" src="http://www.kidokado.com/image/data/themes/Themes-Avengers-Alt.png">
 </div>
 
   
