--- a/Assignments/abrand/Final Project Avengers/Avengers Main Page.html
+++ b/Assignments/abrand/Final Project Avengers/Avengers Main Page.html
@@ -84,8 +84,8 @@
   		
 </div>
 
-<div class="vertical" style="height: 300px; width: 50%; float: left; margin-right: 100000px">
-  <p style="margin-right: 700pt; margin-top: 50pt; margin-left: 50pt; margin-right: 50pt; font-size: 35pt; background-color: midnightblue; color: whitesmoke;"> They are Earth's mightiest heroes, formed to fight the foes no single hero could withstand. The Avengers are the most prestigious and powerful super-hero team in the world, an ever-shifting assemblage of super-beings, adventurers and crime fighters devoted to protecting the planet from menaces beyond the scope of conventional authorities.
+<div class="vertical avengers" style="height: 300px; width: 50%; float: left; margin-right: 100000px">
+  <p class="avengers" style="margin-right: 700pt; margin-top: 50pt; margin-left: 50pt; margin-right: 50pt; font-size: 35pt; background-color: midnightblue; color: whitesmoke;"> They are Earth's mightiest heroes, formed to fight the foes no single hero could withstand. The Avengers are the most prestigious and powerful super-hero team in the world, an ever-shifting assemblage of super-beings, adventurers and crime fighters devoted to protecting the planet from menaces beyond the scope of conventional authorities.
  </p>
 
 
