--- a/Assignments/abrand/Final Project Avengers/Hulk.html
+++ b/Assignments/abrand/Final Project Avengers/Hulk.html
@@ -1,21 +1,19 @@
-<!DOCTYPE html>
+<!DOCTYPE.html>
 <html>
 <head>
-	<title> Thor: Son of Odin </title>
-	<link rel="stylesheet" type="text/css" href="site(14).css">
-	<link rel="stylesheet" type="text/css" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="styles/css/font-awesome.min.css">
+	<title> Hulk: The Strongest Avenger </title>
+
+	<link rel="stylesheet" type="text/css" href="site(15).css">
+	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+	<link rel="stylesheet" href="styles/css/font-awesome.min.css">
 
 	<script type="text/javascript" src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"> </script>
-
-
-
 
 
 </head>
 <body>
 
-	<div>
+<div>
 
 	 <div class="row">
   
@@ -85,16 +83,15 @@
     </div> 
 </div>
     
-    <div>
+
+    <div> 
     	<a href="Avengers Main Page.html"> 
-    		<img src="http://img2.wikia.nocookie.net/__cb20131111184841/disney/images/a/ab/Thor-Avengers.png">
+    		<img src="http://www.officialpsds.com/images/thumbs/The-Incredible-Hulk-psd72868.png">
 
     	</a>
 
+
     </div>
-
-
-
 
 
 
