--- a/Assignments/abrand/Final Project Avengers/Captain America.html
+++ b/Assignments/abrand/Final Project Avengers/Captain America.html
@@ -93,18 +93,18 @@
   </div>
 
 
-  <div class="omaha"> 
-    <legend class="white"> Name: </legend>
+  <div class="omaha avengers" style="font-size: 25pt"> 
+    <legend class="white fontsize"> Name: </legend>
       <ul> 
 
         <li class="33"> <label> Steve Rogers </label>
 
         </li> 
-        <li class="33"> Alias: Captain America </li>
+        <li class="33"> Alias: Captain America: The First Avenger </li>
 
       </ul> 
 
-      <legend class="white"> Affiliations: </legend>
+      <legend class="white fontsize"> Affiliations: </legend>
 
       <ul> 
         <li class="33"> 
@@ -118,7 +118,7 @@
         <li> S.H.I.E.L.D. </li>
       </ul>
       
-        <legend class="white 33"> Abilities: </legend>
+        <legend class="white 33 fontsize"> Abilities: </legend>
       <ul> 
         <li class="white 33"> <label> Olympic-level athleticism </label> </li>
         <li class="white 33"> Peak Phyiscal Condition </li>
@@ -131,7 +131,7 @@
         <li class=" white 33"> Fists of Fury </li>
 
       </ul>
-      <legend class="white 33"> Fun Facts </legend>
+      <legend class="white 33 fontsize"> Fun Facts </legend>
       <ul>
         <li class="white 33"> 6'2" </li>
          <li class="white 33"> 220 pounds </li>
