--- a/Assignments/abrand/Final Project Avengers/Captain America.html
+++ b/Assignments/abrand/Final Project Avengers/Captain America.html
@@ -125,7 +125,7 @@
         <li class="white 33"> Master at Martial Arts </li>
         <li class="white 33"> Slowed age rate </li> 
       </ul>
-        <legend class="white 33"> Equipment </legend>
+        <legend class="white 33 fontsize"> Equipment </legend>
       <ul> 
         <li class="white 33"> Vibranium Shield </li>
         <li class=" white 33"> Fists of Fury </li>
