--- a/Assignments/abrand/Final Project Avengers/Hawkeye.html
+++ b/Assignments/abrand/Final Project Avengers/Hawkeye.html
@@ -84,7 +84,7 @@
 </div>
 
 <div> <a href="Avengers Main Page.html"> 
-	<img style="float: right" src="http://vgboxart.com/resources/render/2244_the-avengers-prev.png">
+	<img style="position: fixed" src="http://vgboxart.com/resources/render/2244_the-avengers-prev.png">
 </a> </div>
     
 
