--- a/Assignments/abrand/Final Project Avengers/Hulk.html
+++ b/Assignments/abrand/Final Project Avengers/Hulk.html
@@ -86,7 +86,7 @@
 
     <div> 
     	<a href="Avengers Main Page.html"> 
-    		<img style="float: right" src="http://www.officialpsds.com/images/thumbs/The-Incredible-Hulk-psd72868.png">
+    		<img style="position: fixed" src="http://www.officialpsds.com/images/thumbs/The-Incredible-Hulk-psd72868.png">
 
     	</a>
 
