Update on Black Widow, Hawkeye, and Hulk

--- a/Assignments/abrand/Final Project Avengers/Black Widow.html
+++ b/Assignments/abrand/Final Project Avengers/Black Widow.html
@@ -85,7 +85,7 @@
     
     <div>
       <a href="Avengers Main Page.html"> 
-        <img src="http://2.bp.blogspot.com/-ln9M2cnLj2I/UfmjDMbp5-I/AAAAAAAAKCo/_6zXLCESomk/s1600/3(1).png">
+        <img src="http://th02.deviantart.net/fs71/PRE/f/2012/356/3/f/the_avengers_black_widow_by_american_paladin-d5orruy.png">
 
       </a>
 
