--- a/Assignments/shinzman/Final/finalMain.html
+++ b/Assignments/shinzman/Final/finalMain.html
@@ -10,7 +10,9 @@
 	<div class="row header1">
 		<div class="col-md-12">
 			<marquee behavior="scroll" direction="left" class="scrolling">
-				<span style="margin:0 30px;">Welcome to the agents of shield and avengers home page!</span> 
+				<span style="margin:0 10%;">Welcome to the agents of shield and avengers home page!</span> 
+				<span style="margin:0 10%;">If you want to go to the Avengers main page, click on the Avengers picture. </span> 
+				<span style="margin:0 10%;">If you want to go to the Agents of Shield main page, click on the Agents of Shield picture. </span> 
 			</marquee>		
 		</div>
 	</div>
@@ -38,21 +40,3 @@
 
 </body>
 </html>
-
-<!--
-
-<div id="avengerinfo" style="visibility:hidden">sidebar
-	</div>
-
-<script type="text/javascript">
-function show_avengers()
-{
-	document.getElementById('avengerinfo').style.visibility="visible";
-}
-
-function hide_avengers()
-{
-	document.getElementById('avengerinfo').style.visibility="hidden";
-}
-</script>
--->
